added service connection

--- a/pipelines/azure-pipelines.yml
+++ b/pipelines/azure-pipelines.yml
@@ -7,7 +7,7 @@ trigger:
 - main
 
 variables:
-  ServiceConnectionName: ''
+  ServiceConnectionName: 'TeamBDevopsSC'
 
 pool:
   vmImage: ubuntu-latest
