--- a/pipelines/plan.yml
+++ b/pipelines/plan.yml
@@ -9,4 +9,5 @@ jobs:
           allowTelemetryCollection: false
           workingDirectory: '$(System.DefaultWorkingDirectory)'
           secureVarsFile: 'notpasswords.tfvars'
+          backendServiceArm: $(ServiceConnectionName)
 
