--- a/pipelines/azure-pipelines.yml
+++ b/pipelines/azure-pipelines.yml
@@ -3,11 +3,14 @@
 # Add steps that build, run tests, deploy, and more:
 # https://aka.ms/yaml
 
-trigger:
-- main
+trigger: none
 
 variables:
   ServiceConnectionName: 'TeamBDevopsSC'
+  bkstrgrg: 'TeamB-stage-rg'
+  bkstrg: 'teambterraformsa'
+  bkstr: 'states'
+  bkstrgkey: 'teambex2.tfstate'
 
 pool:
   vmImage: ubuntu-latest
@@ -18,13 +21,14 @@ stages:
 
     jobs:
       - template: setup.yml
+        continueOnError: false
 
   - stage: plan_terraform
     displayName: 'Plan Terraform'
-    
     dependsOn:
       - setup_terraform
     condition: succeeded('setup_terraform')
 
     jobs:
       - template: plan.yml
+        continueOnError: false
