--- a/pipelines/plan.yml
+++ b/pipelines/plan.yml
@@ -8,4 +8,5 @@ jobs:
           command: 'plan'
           workingDirectory: '$(System.DefaultWorkingDirectory)'
           environmentServiceNameAzureRM: $(ServiceConnectionName)
+        continueOnError: false
 
