--- a/pipelines/plan.yml
+++ b/pipelines/plan.yml
@@ -6,6 +6,7 @@ jobs:
       - task: TerraformTaskV4@4
         inputs:
           command: 'plan'
+          commandOptions: '-var-file notpasswords.tfvars'
           workingDirectory: '$(System.DefaultWorkingDirectory)'
           environmentServiceNameAzureRM: $(ServiceConnectionName)
         continueOnError: false
