--- a/pipelines/azure-pipelines.yml
+++ b/pipelines/azure-pipelines.yml
@@ -11,6 +11,7 @@ variables:
   beStrg: 'teambterraformsa'
   beStrgCon: 'states'
   beStrgKey: 'teambex2.tfstate'
+  env: 'Prod'
 
 pool:
   vmImage: ubuntu-latest
