--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,7 +10,7 @@ pool:
   vmImage: ubuntu-latest
   
 variables: # terraform variables
- ServiceConnectionName: 'anynameofsp'
+ ServiceConnectionName: 'TeamBDevopsSC'
  bk-rg-name: 'teamb-stage-rg'
  bk-str-account-name: 'teambterraformsa'
  bk-container-name: 'states'
@@ -26,4 +26,50 @@ variables: # terraform variables
              displayName: tfinstall
              inputs:
                terraformVersion: 'latest'
-             
+           - task: TerraformTaskV4@4
+             displayName: init
+             inputs:
+               provider: 'azurerm'
+               command: 'init'
+               backendServiceArm: 'TeamBDevopsSC'
+               backendAzureRmResourceGroupName: '$(bk-rg-name)'
+               backendAzureRmStorageAccountName: '$(bk-str-account-name)'
+               backendAzureRmContainerName: '$bk-container-name)'
+               backendAzureRmKey: '$(bk-key)'
+           - task: TerraformTaskV4@4
+             displayName: validate
+             inputs:
+               provider: 'azurerm'
+               command: 'validate'
+   - stage: tfdeploy
+     condition: succeeded('tfvalidate')
+     dependsOn: tfvalidate
+     jobs:
+       - job: apply
+         steps:
+           - task: TerraformInstaller@2
+             displayName: tfinstall
+             inputs:
+               terraformVersion: 'latest'
+           - task: TerraformTaskV4@4
+             displayName: init
+             inputs:
+               provider: 'azurerm'
+               command: 'init'
+               backendServiceArm: 'TeamBDevopsSC'
+               backendAzureRmResourceGroupName: '$(bk-rg-name)'
+               backendAzureRmStorageAccountName: '$(bk-str-account-name)'
+               backendAzureRmContainerName: '$bk-container-name)'
+               backendAzureRmKey: '$(bk-key)'
+           - task: TerraformTaskV4@4
+             displayName: plan
+             inputs:
+               provider: 'azurerm'
+               command: 'plan'
+               environmentServiceNameAzureRM: 'TeamBDevopsSC'
+           - task: TerraformTaskV4@4
+             displayName: apply
+             inputs:
+               provider: 'azurerm'
+               command: 'apply'
+               environmentServiceNameAzureRM: 'TeamBDevopsSC'
