added working directory to missing tasks

--- a/pipelines/plan.yml
+++ b/pipelines/plan.yml
@@ -11,6 +11,7 @@ jobs:
           commandOptions: 'select $(env)'
           outputTo: 'console'
           environmentServiceNameAzureRM: '$(ServiceConnectionName)'
+          workingDirectory: '$(System.DefaultWorkingDirectory)'
 
       - task: TerraformTaskV4@4
         displayName: 'Plan'
