--- a/pipelines/plan.yml
+++ b/pipelines/plan.yml
@@ -3,6 +3,19 @@ jobs:
     displayName: "Run Plan"
     steps:
       - task: TerraformTaskV4@4
+        displayName: 'Run Init'
+        inputs:
+          command: 'init'
+          provider: 'azurerm'
+          workingDirectory: '$(System.DefaultWorkingDirectory)'
+          backendServiceArm: '$(ServiceConnectionName)'
+          backendAzureRmResourceGroupName: '$(beStrgRG)'
+          backendAzureRmStorageAccountName: '$(beStrg)'
+          backendAzureRmContainerName: '$(beStrgCon)'
+          backendAzureRmKey: 'beStrgKey'
+        continueOnError: false
+
+      - task: TerraformTaskV4@4
         displayName: 'Select Workspace'
         inputs:
           provider: 'azurerm'
