--- a/pipelines/plan.yml
+++ b/pipelines/plan.yml
@@ -2,6 +2,12 @@ jobs:
   - job: plan_terraform
     displayName: "Run Plan"
     steps:
+      - task: TerraformInstaller@1
+        displayName: 'Install Terraform'
+        inputs:
+          terraformVersion: 'latest'
+        continueOnError: false
+        
       - task: TerraformTaskV4@4
         displayName: 'Run Init'
         inputs:
