--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,60 +16,28 @@ variables: # terraform variables
  bk-container-name: 'states'
  bk-key: 'teambex2.tfstate' # key is actually name of the file, determined here
 
- stages:
-   - stage: tfvalidate
-     jobs:
-       - job: validate
-         continueOnError: false
-         steps:
-           - task: TerraformInstaller@2
-             displayName: tfinstall
-             inputs:
-               terraformVersion: 'latest'
-           - task: TerraformTaskV4@4
-             displayName: init
-             inputs:
-               provider: 'azurerm'
-               command: 'init'
-               backendServiceArm: 'TeamBDevopsSC'
-               backendAzureRmResourceGroupName: '$(bk-rg-name)'
-               backendAzureRmStorageAccountName: '$(bk-str-account-name)'
-               backendAzureRmContainerName: '$bk-container-name)'
-               backendAzureRmKey: '$(bk-key)'
-           - task: TerraformTaskV4@4
-             displayName: validate
-             inputs:
-               provider: 'azurerm'
-               command: 'validate'
-   - stage: tfdeploy
-     condition: succeeded('tfvalidate')
-     dependsOn: tfvalidate
-     jobs:
-       - job: apply
-         steps:
-           - task: TerraformInstaller@2
-             displayName: tfinstall
-             inputs:
-               terraformVersion: 'latest'
-           - task: TerraformTaskV4@4
-             displayName: init
-             inputs:
-               provider: 'azurerm'
-               command: 'init'
-               backendServiceArm: 'TeamBDevopsSC'
-               backendAzureRmResourceGroupName: '$(bk-rg-name)'
-               backendAzureRmStorageAccountName: '$(bk-str-account-name)'
-               backendAzureRmContainerName: '$bk-container-name)'
-               backendAzureRmKey: '$(bk-key)'
-           - task: TerraformTaskV4@4
-             displayName: plan
-             inputs:
-               provider: 'azurerm'
-               command: 'plan'
-               environmentServiceNameAzureRM: 'TeamBDevopsSC'
-           - task: TerraformTaskV4@4
-             displayName: apply
-             inputs:
-               provider: 'azurerm'
-               command: 'apply'
-               environmentServiceNameAzureRM: 'TeamBDevopsSC'
+stages:
+  - stage: tfvalidate
+    jobs:
+      - job: validate
+        continueOnError: false
+        steps:
+          - task: TerraformInstaller@1
+            displayName: tfinstall
+            inputs:
+              terraformVersion: 'latest'
+          - task: TerraformTaskV4@4
+            displayName: init
+            inputs:
+              provider: 'azurerm'
+              command: 'init'
+              backendServiceArm: 'TeamBDevopsSC'
+              backendAzureRmResourceGroupName: '$(bk-rg-name)'
+              backendAzureRmStorageAccountName: '$(bk-str-account-name)'
+              backendAzureRmContainerName: '$(bk-container-name)'
+              backendAzureRmKey: '$(bk-key)'
+          - task: TerraformTaskV4@4
+            inputs:
+              provider: 'azurerm'
+              command: 'validate'
+          
