--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -67,3 +67,9 @@ stages:
               provider: 'azurerm'
               command: 'plan'
               environmentServiceNameAzureRM: 'TeamBDevopsSC'
+          - task: TerraformTaskV4@4
+            displayName: apply
+            inputs:
+              provider: 'azurerm'
+              command: 'apply'
+              environmentServiceNameAzureRM: 'TeamBDevopsSC'
