--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,6 +26,8 @@ stages:
             displayName: tfinstall
             inputs:
               terraformVersion: 'latest'
+            continueOnError: false
+
           - task: TerraformTaskV4@4
             displayName: init
             inputs:
@@ -36,6 +38,7 @@ stages:
               backendAzureRmStorageAccountName: '$(bk-str-account-name)'
               backendAzureRmContainerName: '$(bk-container-name)'
               backendAzureRmKey: '$(bk-key)'
+            continueOnError: false
           - task: TerraformTaskV4@4
             displayName: validate
             inputs:
