--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -36,6 +36,15 @@ stages:
               backendAzureRmKey: '$(bk-key)'
             continueOnError: false
           - task: TerraformTaskV4@4
+            inputs:
+              provider: 'azurerm'
+              command: 'custom'
+              commandOptions: 'select -or-create dev'
+              outputTo: 'console'
+              customCommand: 'workspace'
+              environmentServiceNameAzureRM: 'TeamBDevopsSC'
+            
+          - task: TerraformTaskV4@4
             displayName: validate
             inputs:
               provider: 'azurerm'
@@ -70,6 +79,14 @@ stages:
               backendAzureRmStorageAccountName: '$(bk-str-account-name)'
               backendAzureRmContainerName: '$(bk-container-name)'
               backendAzureRmKey: '$(bk-key)'
+          - task: TerraformTaskV4@4
+            inputs:
+              provider: 'azurerm'
+              command: 'custom'
+              commandOptions: 'select -or-create dev'
+              outputTo: 'console'
+              customCommand: 'workspace'
+              environmentServiceNameAzureRM: 'TeamBDevopsSC'
           - task: TerraformTaskV4@4
             displayName: plan
             inputs:
