added condition to destroy

--- a/pipelines/azure-pipelines.yml
+++ b/pipelines/azure-pipelines.yml
@@ -44,6 +44,8 @@ stages:
 
   - stage: destroy_terraform_stage
     displayName: 'Destroy Terraform'
-
+    dependsOn:
+      - plan_terraform_stage
+    condition: succeeded('plan_terraform_stage')
     jobs:
       - template: destroy.yml
