--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -42,8 +42,9 @@ stages:
               commandOptions: 'select -or-create $(env)'
               outputTo: 'console'
               customCommand: 'workspace'
-              environmentServiceNameAzureRM: 'TeamBDevopsSC'
-            
+              environmentServiceNameAzureRM: 'TeamBDevopsSC'            
+          - script: echo "The value of Workspace is $(env)"
+            displayName: 'Workspace'
           - task: TerraformTaskV4@4
             displayName: validate
             inputs:
