--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -74,12 +74,12 @@ stages:
               echo "The password for the VMs is: $(vm_password)"
             displayName: usevmpassword
             env:
-              VM_PASSWORD: $(vm_password)
+              var.vm.password: $(vm_password)
           - script: | 
               echo "The password for sql is: $(sql_password)" 
             displayName: usesqlpassword
             env:
-              SQL_PASSWORD: $(sql_password)
+              var.sql.password: $(sql_password)
           - task: TerraformTaskV4@4
             inputs:
               provider: 'azurerm'
