chagned env to parameter

--- a/pipelines/azure-pipelines.yml
+++ b/pipelines/azure-pipelines.yml
@@ -14,6 +14,9 @@ parameters:
       - Apply
       - Destroy
 
+  - name: env
+    type: string
+    default: 'prod'
 
 variables:
   ServiceConnectionName: 'TeamBDevopsSC'
