--- a/pipelines/azure-pipelines.yml
+++ b/pipelines/azure-pipelines.yml
@@ -51,7 +51,7 @@ stages:
     displayName: 'Deploy Terraform'
     dependsOn:
       - plan_terraform_stage
-    condition: succeeded('plan_terraform_stage') && eq(parameters.Type, 'Apply')
+    condition: and(succeeded('plan_terraform_stage'), eq(parameters.Type, 'Apply'))
 
     jobs:
       - template: deploy.yml
@@ -60,7 +60,7 @@ stages:
     displayName: 'Destroy Terraform'
     dependsOn:
       - plan_terraform_stage
-    condition: succeeded('plan_terraform_stage') && eq(parameters.Type, 'Destroy')
+    condition: and(succeeded('plan_terraform_stage'), eq(parameters.Type, 'Destroy'))
 
     jobs:
       - template: destroy.yml
