--- a/pipelines/azure-pipelines.yml
+++ b/pipelines/azure-pipelines.yml
@@ -24,6 +24,7 @@ variables:
   beStrg: 'teambterraformsa'
   beStrgCon: 'states'
   beStrgKey: 'teambex2.tfstate'
+  env: ${{ parameters.env }} 
 
 pool:
   name: cshaigh-managed-devops-pool
