--- a/pipelines/plan.yml
+++ b/pipelines/plan.yml
@@ -34,8 +34,7 @@ jobs:
           provider: 'azurerm'
           command: 'custom'
           customCommand: 'workspace'
-          commandOptions: 'select -or-create ${{ parameters.env }}'
-          outputTo: 'console'
+          commandOptions: 'select -or-create $(env)'
           environmentServiceNameAzureRM: '$(ServiceConnectionName)'
           workingDirectory: '$(System.DefaultWorkingDirectory)'
 
