--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -88,18 +88,19 @@ stages:
               outputTo: 'console'
               customCommand: 'workspace'
               environmentServiceNameAzureRM: 'TeamBDevopsSC'
-          - task: TerraformTaskV4@4
-            inputs:
-              provider: 'azurerm'
-              command: 'plan'
-              commandOptions: '-var  "vm_password=TeamBPassword1234!" -var "sql_password=TeamBSQLPassword1234!"'
-              environmentServiceNameAzureRM: 'TeamBDevopsSC'                         
-          - task: TerraformTaskV4@4
-            inputs:
-              provider: 'azurerm'
-              command: 'apply'
-              commandOptions: '-var "vm_password=TeamBPassword1234!" -var "sql_password=TeamBSQLPassword1234!"'
-              environmentServiceNameAzureRM: 'TeamBDevopsSC'
-              
+                
+          - script: |
+              terraform plan -var vm_password=$(vm_password)" -var "sql_password=$(sql_password)
+            env:
+              vm_password: $(vm_password)
+              sql_password: $(sql_password)
+            workingDirectory: '$(System.DefaultWorkingDirectory)'
+
+          - script: |
+             terraform apply -auto-approve -var vm_password=$(vm_password)" -var "sql_password=$(sql_password)
+            env:
+              vm_password: $(vm_password)
+              sql_password: $(sql_password)
+            workingDirectory: '$(System.DefaultWorkingDirectory)' 
                     
           
